--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         margin-bottom: 1.5rem;
       }
 
+      .container:hover{
+        width: 394px;
+        height: 532px;
+      }
+
       .image1, img {
         width: 100%;
         margin: auto;
@@ -61,6 +66,10 @@
         border-radius: 10px;
         font-weight: 900;
         margin: 0;
+      }
+
+      h3:active{
+        background: #f1401a;
       }
 
       h1{
