--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
+
+      @media (max-width: 600px) {
+        .container{
+          width: 375px;
+        }
+      }
     </style>
   </head>
   <body>
